--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
     "lodash": "^3.10.1",
     "method-override": "^2.3.5",
     "mocha": "^2.3.4",
+    "mongoose": "^4.5.7",
     "morgan": "^1.6.1",
     "node-excel-export": "^1.1.0",
+    "passport": "^0.3.2",
     "pg": "^4.4.3",
     "phantomjs": "^1.9.19",
     "q": "^1.4.1",
