--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bluebird": "^3.3.3",
     "body-parser": "^1.14.1",
     "chai": "^3.4.1",
+    "composable-middleware": "^0.3.0",
     "cookie-parser": "^1.4.0",
     "crypto": "0.0.3",
     "domain": "0.0.1",
@@ -25,6 +26,7 @@
     "events": "^1.1.0",
     "expect.js": "^0.3.1",
     "express": "^4.13.3",
+    "express-jwt": "^3.4.0",
     "flattify": "^1.0.2",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
@@ -51,9 +53,11 @@
     "method-override": "^2.3.5",
     "mocha": "^2.3.4",
     "mongoose": "^4.5.7",
+    "mongoose-bird": "0.0.1",
     "morgan": "^1.6.1",
     "node-excel-export": "^1.1.0",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "pg": "^4.4.3",
     "phantomjs": "^1.9.19",
     "q": "^1.4.1",
