--- a/package.json
+++ b/package.json
@@ -57,7 +57,11 @@
     "morgan": "^1.6.1",
     "node-excel-export": "^1.1.0",
     "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth": "^1.0.0",
+    "passport-google-oauth2": "^0.1.6",
     "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "pg": "^4.4.3",
     "phantomjs": "^1.9.19",
     "q": "^1.4.1",
