--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chai": "^3.4.1",
     "composable-middleware": "^0.3.0",
     "cookie-parser": "^1.4.0",
+    "cors": "^2.8.1",
     "crypto": "0.0.3",
     "domain": "0.0.1",
     "ejs": "^2.3.4",
