--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "mocha": "^2.3.4",
     "mongoose": "^4.5.7",
     "mongoose-bird": "0.0.1",
+    "mongoose-deep-populate": "^3.0.0",
     "morgan": "^1.6.1",
     "node-excel-export": "^1.1.0",
     "passport": "^0.3.2",
